[package]
name = "route_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.25"
anyhow = "1.0"
thiserror = "2.0.12"

[[bin]]
name = "server"
path = "src/main.rs"
